argocd-example/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpsink
  namespace: httpsink
  labels:
    app: httpsink
    app.kubernetes.io/name: httpsink
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpsink
  template:
    metadata:
      labels:
        app: httpsink
        app.kubernetes.io/name: httpsink
        app.kubernetes.io/component: web
    spec:
      containers:
      - name: httpsink
        image: quay.io/evanshortiss/httpsink:latest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
